--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
   border-radius: 12px;
 }
 
-.middle-section-one {
+.middle-section {
   padding: 2.5% 8.5rem;
   text-align: center;
 }
@@ -110,4 +110,19 @@ body {
 
 .middle-content .text {
   width: 150px;
+}
+
+.middle-section-two {
+  padding: 5% 8.5rem;
+  text-align: center;
+  background-color: #E5E7Eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.middle-section-two .quote {
+  font: 36px light italic;
+  color: #1F2937;
+  width: 80%;
 }
