--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px solid gold;
+  /* border: 1px solid gold; */
 }
 
 html {
@@ -62,7 +62,7 @@ body {
   margin: 0;
 }
 
-.hero-content .hero-subtext{
+.hero-content .hero-subtext {
   font: 18px;
   color: #E5E7Eb;
   margin: 0;
@@ -125,4 +125,51 @@ body {
   font: 36px light italic;
   color: #1F2937;
   width: 80%;
+}
+
+.quote span {
+  display: block;
+  margin-left: 80%;
+  padding: 26px;
+  font: 32px extra-bold;
+}
+
+.bottom-section {
+  padding: 2.5% 8.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-section-content {
+  flex: 0.5;
+  display: flex;
+  padding: 2.5%;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #3882F6;
+  border-radius: 12px;
+}
+
+.bottom-section-content .bottom-text h2, p{
+  margin: 0;
+  padding: 6px;
+}
+
+.bottom-section-content button {
+  width: 30%;
+  height: 30%;
+  border-radius: 12px;
+  text-align: center;
+  padding: 12px 34px;
+  background-color: #3882F6;
+  color: #F9FAF8;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.footer {
+  padding: 0.5% 8.5rem;
+  text-align: center;
+  background-color: #1F2937;
 }
